# AIReceiptParser-Anna

./: .env.example  .gitignore  README.md  README_ANNA.md  SUBMISSION.md  app.json  manifest.json  reference.md  requirements.txt  search.py
.anna/: app.json  dev-app.json  executas.lock.json
.github/workflows/: build-receipt-parser-tool-binary.yml
bundle/: anna-tool-ids.js  app.js  index.html  style.css
bundle/js/: analytics.js  fallback.js  llm-parser.js  translations.js  utils.js  warnings.js
executas/receipt-copilot-coach/: SKILL.md  executa.json
executas/receipt-copilot-coach/.anna/: executa.json
executas/receipt-parser-tool/: db.py  executa.json  exporters.py  ocr.py  package_binary.sh  pyproject.toml  receipt_parser_core.py  receipt_parser_plugin.py  test_ocr_real.py  test_plugin.py
executas/receipt-parser-tool/.anna/: executa.json
scratch/: search_reference.py  search_sandbox.py
